--- a/HitomiScrollViewerWebApp/Components/TagFilterEditor.razor
+++ b/HitomiScrollViewerWebApp/Components/TagFilterEditor.razor
@@ -1,26 +1,29 @@
-﻿@inject IHttpClientFactory HttpClientFactory
+﻿@inherits ComponentBase
+@inject TagFilterService TagFilterService
 
-<div style="grid-template-columns: 2fr min-content min-content 3fr min-content min-content 2fr;">
-    <FluentButton style="grid-column: 2;" IconEnd="@(new Icons.Regular.Size20.Add())"></FluentButton>
-    <FluentButton style="grid-column: 3;" IconEnd="@(new Icons.Regular.Size20.Edit())"></FluentButton>
-    <FluentSelect style="grid-column: 4;"
-                  TOption="TagFilter"
-                  Items="@_tagFilters"
-                  OptionText="@(tf => tf.Name)"
-                  @bind-SelectedOption="@SelectedTagFilter" />
-    <FluentButton style="grid-column: 5;" IconEnd="@(new Icons.Regular.Size20.Save())"></FluentButton>
-    <FluentButton style="grid-column: 6;" IconEnd="@(new Icons.Regular.Size20.Delete())"></FluentButton>
+<div class="gap-4 align-center" style="display: grid; grid-template-columns: auto auto 1fr auto auto;">
+    <MudFab Color="Color.Primary" StartIcon="@Icons.Material.Filled.Add" Style="grid-column: 1"/>
+    <MudFab Color="Color.Primary" StartIcon="@Icons.Material.Filled.Edit" Style="grid-column: 2" />
+    <MudSelect id="tag-filter-selector"
+               T="TagFilter"
+               ToStringFunc="@(tf => tf.Name)"
+               Style="grid-column: 3; border-color: var(--mud-palette-primary);"
+               Class="border-solid border-2 rounded pl-2">
+        @foreach (TagFilter tagFilter in _tagFilters)
+        {
+            <MudSelectItem Value="tagFilter" />
+        }
+    </MudSelect>
+    <MudFab Color="Color.Primary" StartIcon="@Icons.Material.Filled.Save" Style="grid-column: 4" />
+    <MudFab Color="Color.Primary" StartIcon="@Icons.Material.Filled.Delete" Style="grid-column: 5" />
 </div>
 
 @code {
-    private IEnumerable<TagFilter> _tagFilters;
-    public TagFilter SelectedTagFilter;
+    private List<TagFilter> _tagFilters = [];
     protected override async Task OnInitializedAsync()
     {
-        HttpClient hitomiClient = HttpClientFactory.CreateClient("HitomiAPI");
-        HttpResponseMessage response = await hitomiClient.GetAsync("api/tagfilter");
-        _tagFilters = await response.Content.ReadFromJsonAsync<IEnumerable<TagFilter>>();
-
+        List<TagFilter>? result = await TagFilterService.GetTagFiltersAsync();
+        _tagFilters = result == null ? [] : result;
         await base.OnInitializedAsync();
     }
 }
