--- a/HitomiScrollViewerWebApp/_Imports.razor
+++ b/HitomiScrollViewerWebApp/_Imports.razor
@@ -5,12 +5,12 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
-@using Microsoft.FluentUI.AspNetCore.Components
-@using Icons = Microsoft.FluentUI.AspNetCore.Components.Icons
-
 @using Microsoft.JSInterop
+
 @using HitomiScrollViewerWebApp
 @using HitomiScrollViewerWebApp.Layout
 @using HitomiScrollViewerWebApp.Components
-
+@using HitomiScrollViewerWebApp.Services
 @using HitomiScrollViewerData.Entities
+
+@using MudBlazor
