--- a/HitomiScrollViewerWebApp/_Imports.razor
+++ b/HitomiScrollViewerWebApp/_Imports.razor
@@ -10,7 +10,9 @@
 @using HitomiScrollViewerWebApp
 @using HitomiScrollViewerWebApp.Layout
 @using HitomiScrollViewerWebApp.Components
+@using HitomiScrollViewerWebApp.Models
 @using HitomiScrollViewerWebApp.Services
 @using HitomiScrollViewerData.Entities
+@using HitomiScrollViewerData.DTOs
 
 @using MudBlazor
