--- a/HitomiScrollViewerWebApp/Pages/Search.razor
+++ b/HitomiScrollViewerWebApp/Pages/Search.razor
@@ -5,11 +5,20 @@
 <PageTitle>Search</PageTitle>
 
 <div style="display: grid; grid-template-columns: 75% 25%; height: 100%; padding: 32px;">
-    <MudPaper Style="display: grid; grid-column: 1; grid-template-rows: auto 40dvh; gap: 16px; padding: 32px;">
+    <MudPaper Style="display: grid; grid-column: 1; grid-template-rows: auto auto 40dvh; gap: 16px; padding: 32px;">
         <div style="grid-row: 1">
             <TagFilterEditor SelectedTagFiltersChanged="@SelectedTagFiltersChanged"></TagFilterEditor>
         </div>
-        <div style="grid-row: 2; display: grid; grid-template-columns: repeat(@TAG_CATEGORIES.Length, 1fr);
+        <div style="grid-row: 2" class="d-flex justify-space-between">
+            <div class="d-flex gap-4">
+                <MudButton Color="Color.Warning" EndIcon="@Icons.Material.Filled.ClearAll">Clear All Tags</MudButton>
+                <MudButton Color="Color.Default" EndIcon="@Icons.Material.Filled.Refresh">Reload Tags</MudButton>
+            </div>
+            <div>
+                <MudSwitch T="bool" Label="Auto save" Color="Color.Primary"/>
+            </div>
+        </div>
+        <div style="grid-row: 3; display: grid; grid-template-columns: repeat(@TAG_CATEGORIES.Length, 1fr);
                     border: @BORDER_SOLID_PRIMARY; border-radius: inherit;">
             @for (int i = 0; i < _tagSearchChipSetModels.Length; i++) {
                 <div style="grid-column: @(i + 1); border-right: @(i < TAG_CATEGORIES.Length - 1 ? BORDER_SOLID_PRIMARY : "none");">
