Fixed TagSearchChipSet SearchValue setter

--- a/HitomiScrollViewerWebApp/Pages/Settings.razor
+++ b/HitomiScrollViewerWebApp/Pages/Settings.razor
@@ -1,4 +1,6 @@
-﻿<h3>Settings</h3>
+﻿@page "/settings"
+
+<h3>Settings</h3>
 
 <div>Language</div>
 <MudSelect T="string" Label="Language" Variant="Variant.Filled" Style="width: 200px;">
