--- a/HitomiScrollViewerWebApp/Pages/Search.razor
+++ b/HitomiScrollViewerWebApp/Pages/Search.razor
@@ -1,21 +1,35 @@
 ﻿@page "/search"
+@using HitomiScrollViewerData
 @inject TagService TagService
 @inject TagFilterService TagFilterService
+@inject ISnackbar Snackbar
 
 <PageTitle>Search</PageTitle>
 
 <div style="display: grid; grid-template-columns: 75% 25%; height: 100%; padding: 32px;">
     <MudPaper Style="display: grid; grid-column: 1; grid-template-rows: auto auto 40dvh; gap: 16px; padding: 32px;">
         <div style="grid-row: 1">
-            <TagFilterEditor SelectedTagFiltersChanged="@SelectedTagFiltersChanged"></TagFilterEditor>
+            <TagFilterEditor @ref="_tagFilterEditor"
+                             SelectedTagFilterChanged="@SelectedTagFilterChanged"
+                             OnSaveButtonClicked="@(() => SaveTagFilter(_tagFilterEditor.CurrentTagFilter))" />
         </div>
         <div style="grid-row: 2" class="d-flex justify-space-between">
             <div class="d-flex gap-4">
-                <MudButton Color="Color.Primary" EndIcon="@Icons.Material.Filled.Clear" OnClick="ClearAllTags">Clear All Tags</MudButton>
-                <MudButton Color="Color.Primary" EndIcon="@Icons.Material.Filled.Refresh" OnClick="LoadTags">Reload Tags</MudButton>
+                <MudButton Color="Color.Primary"
+                           EndIcon="@Icons.Material.Filled.Clear"
+                           OnClick="ClearAllTags"
+                           Disabled="@(_tagFilterEditor?.CurrentTagFilter == null)">
+                    Clear All Tags
+                </MudButton>
+                <MudButton Color="Color.Primary"
+                           EndIcon="@Icons.Material.Filled.Refresh"
+                           OnClick="LoadTags"
+                           Disabled="@(_tagFilterEditor?.CurrentTagFilter == null)">
+                    Reload Tags
+                </MudButton>
             </div>
             <div>
-                <MudSwitch T="bool" Label="Auto save" Color="Color.Primary" />
+                <MudSwitch T="bool" Label="Auto save" Color="Color.Primary" @bind-Value="_isAutoSaveEnabled" />
             </div>
         </div>
         <div style="grid-row: 3; display: grid; grid-template-columns: repeat(@TAG_CATEGORIES.Length, 1fr);
@@ -31,47 +45,3 @@
     <div style="display: grid; grid-column: 2; grid-template-rows: auto 1fr 1fr;">
     </div>
 </div>
-
-@code {
-    private static readonly TagCategory[] TAG_CATEGORIES = Enum.GetValues<TagCategory>();
-    private const string BORDER_SOLID_PRIMARY = "1px solid var(--mud-palette-primary)";
-
-    private TagFilter? _currentTagFilter;
-    private TagSearchChipSetModel[] _tagSearchChipSetModels = new TagSearchChipSetModel[TAG_CATEGORIES.Length];
-
-    public Search() {
-        _tagSearchChipSetModels = [.. TAG_CATEGORIES.Select(tagCategory => new TagSearchChipSetModel() {
-            TagCategory = tagCategory,
-            Label = tagCategory.ToString(),
-            ToStringFunc = (tag => tag.Value),
-            SearchFunc = async (string text, CancellationToken ct) => {
-                List<Tag>? tags = await TagService.GetTagsAsync(tagCategory, 8, text, ct);
-                return tags == null ? [] : tags.Select(tag => tag.ToTagDTO());
-            }
-        })];
-    }
-
-    private async void SelectedTagFiltersChanged(IEnumerable<TagFilter> tagFilters) {
-        _currentTagFilter = tagFilters.First();
-        await LoadTags();
-    }
-
-    private void ClearAllTags() {
-        foreach (TagSearchChipSetModel model in _tagSearchChipSetModels) {
-            model.ChipModels = [];
-        }
-    }
-
-    private async Task LoadTags() {
-        if (_currentTagFilter != null) {
-            List<TagDTO>? tags = await TagService.GetTagsFromTagFilter(_currentTagFilter.Id);
-            if (tags != null) {
-                foreach (TagSearchChipSetModel model in _tagSearchChipSetModels) {
-                    model.ChipModels = [.. tags.Where(t => t.Category == model.TagCategory)
-                                       .Select(t => new SearchChipModel<TagDTO>() { Value = t })];
-                }
-            }
-            StateHasChanged();
-        }
-    }
-}
