--- a/HitomiScrollViewerWebApp/Layout/MainLayout.razor
+++ b/HitomiScrollViewerWebApp/Layout/MainLayout.razor
@@ -8,6 +8,7 @@
 <MudThemeProvider />
 <MudPopoverProvider />
 <MudSnackbarProvider />
+<MudDialogProvider MaxWidth="MaxWidth.Small" FullWidth="true" />
 
 <MudLayout>
     @if (_isInitialized) {
