--- a/HitomiScrollViewerWebApp/Components/TextInputDialog.razor
+++ b/HitomiScrollViewerWebApp/Components/TextInputDialog.razor
@@ -12,7 +12,7 @@
                       ErrorText="@_errorMessage" />
     </DialogContent>
     <DialogActions>
-        <MudButton Color="Color.Primary" Variant="Variant.Filled" OnClick="Submit" Disabled="@(Text.Length == 0)">@ActionText</MudButton>
+        <MudButton Color="Color.Primary" Variant="Variant.Filled" OnClick="Submit" Disabled="@_disableActionButton">@ActionText</MudButton>
         <MudButton OnClick="Cancel">Cancel</MudButton>
     </DialogActions>
 </MudDialog>
