--- a/HitomiScrollViewerWebApp/Pages/Search.razor
+++ b/HitomiScrollViewerWebApp/Pages/Search.razor
@@ -8,42 +8,48 @@
 <PageTitle>Search</PageTitle>
 
 <div style="display: grid; grid-template-columns: 75% 25%; height: 100%; padding: 32px;">
-    <MudPaper Style="display: grid; grid-column: 1; grid-template-rows: auto auto 40dvh; gap: 16px; padding: 32px;">
-        <div style="grid-row: 1">
-            <TagFilterEditor @ref="_tagFilterEditor"
-                             SelectedTagFilterChanged="@SelectedTagFilterChanged"
-                             OnCreateButtonClicked="@CreateTagFilter"
-                             OnSaveButtonClicked="@(() => SaveTagFilter(_tagFilterEditor.CurrentTagFilter))" />
-        </div>
-        <div style="grid-row: 2" class="d-flex justify-space-between">
-            <div class="d-flex gap-4">
-                <MudButton Color="Color.Primary"
-                           EndIcon="@Icons.Material.Filled.Clear"
-                           OnClick="ClearAllTags"
-                           Disabled="@(_tagFilterEditor?.CurrentTagFilter == null)">
-                    Clear All Tags
-                </MudButton>
-                <MudButton Color="Color.Primary"
-                           EndIcon="@Icons.Material.Filled.Refresh"
-                           OnClick="LoadTags"
-                           Disabled="@(_tagFilterEditor?.CurrentTagFilter == null)">
-                    Reload Tags
-                </MudButton>
-            </div>
+    <div style="grid-column: 1;">
+        <MudPaper Class="d-flex flex-column pa-8 gap-4">
             <div>
-                <MudSwitch T="bool" Label="Auto save" Color="Color.Primary" @bind-Value="_isAutoSaveEnabled" />
+                <TagFilterEditor @ref="_tagFilterEditor"
+                                 SelectedTagFilterChanged="@SelectedTagFilterChanged"
+                                 OnCreateButtonClicked="@CreateTagFilter"
+                                 OnRenameButtonClicked="@RenameTagFilter"
+                                 OnSaveButtonClicked="@(() => SaveTagFilter(_tagFilterEditor.CurrentTagFilter))" />
             </div>
-        </div>
-        <div style="grid-row: 3; display: grid; grid-template-columns: repeat(@TAG_CATEGORIES.Length, 1fr);
-                    border: @BORDER_SOLID_PRIMARY; border-radius: inherit; height: 100%">
-            @for (int i = 0; i < _tagSearchChipSetModels.Length; i++) {
-                <div style="grid-column: @(i + 1); border-right: @(i < TAG_CATEGORIES.Length - 1 ? BORDER_SOLID_PRIMARY : "none");
-                            max-height: 100%; overflow: hidden">
-                    <TagSearchChipSet Model="_tagSearchChipSetModels[i]" />
+            <div class="d-flex justify-space-between">
+                <div class="d-flex gap-4">
+                    <MudButton Color="Color.Primary"
+                               EndIcon="@Icons.Material.Filled.Clear"
+                               OnClick="ClearAllTags"
+                               Disabled="@(_tagFilterEditor?.CurrentTagFilter == null)">
+                        Clear All Tags
+                    </MudButton>
+                    <MudButton Color="Color.Primary"
+                               EndIcon="@Icons.Material.Filled.Refresh"
+                               OnClick="LoadTags"
+                               Disabled="@(_tagFilterEditor?.CurrentTagFilter == null)">
+                        Reload Tags
+                    </MudButton>
                 </div>
-            }
-        </div>
-    </MudPaper>
+                <div>
+                    <MudSwitch T="bool" Label="Auto save" Color="Color.Primary" @bind-Value="_isAutoSaveEnabled" />
+                </div>
+            </div>
+            <div style="display: grid; grid-template-columns: repeat(@TAG_CATEGORIES.Length, 1fr);
+                        border: @BORDER_SOLID_PRIMARY; border-radius: inherit; height: 40dvh">
+                @for (int i = 0; i < _tagSearchChipSetModels.Length; i++) {
+                    <div style="grid-column: @(i + 1); border-right: @(i < TAG_CATEGORIES.Length - 1 ? BORDER_SOLID_PRIMARY : "none");
+                                max-height: 100%; overflow: hidden">
+                        <TagSearchChipSet Model="_tagSearchChipSetModels[i]" />
+                    </div>
+                }
+            </div>
+        </MudPaper>
+        <MudPaper>
+            <TagFilterSelector ChipModels="@_tagFilterEditor"/>
+        </MudPaper>
+    </div>
     <div style="display: grid; grid-column: 2; grid-template-rows: auto 1fr 1fr;">
     </div>
 </div>
